--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,100 @@
 /* Import Bootstrap CSS first */
-@import "bootstrap/dist/css/bootstrap.min.css";
+@import"bootstrap/dist/css/bootstrap.min.css";
 
-/* Then declare your @font-face rule */
+/********************************* FONTS *************************************/
 @font-face {
-  font-family: 'Soria';
-  src: url('../assets/soria-font.ttf');
+  font-family: 'Alex Brush';
+  src: url('/assets/alex-brush-regular.woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Vercetti';
+  src: url('/assets/Vercetti-Regular.woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Object Sans';
+  src: url('/assets/ObjectSans-Regular.otf');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Lingkawi';
+  src: url('/assets/Lingkawi-South.otf');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Right Sans';
+  src: url('/assets/PPRightSans-Light.otf');
   font-weight: normal;
   font-style: normal;
 }
 
-/* Or apply it to the body element */
-body {
-  font-family: 'Soria', sans-serif; /* Fallback to sans-serif if Soria is not available */
+/********************************* ROOT *************************************/
+/* Apply your custom font to the html or body element */
+.homepage {
+  height: 100vh;
 }
 
-/* Other styles */
+body {
+ /* background-image: url('/assets/pearl-background.jpeg'); */
+ background-color: rgb(92, 17, 0) !important;
+}
+
+/********************************* HEADER *************************************/
+.navbar-brand {
+  color: rgb(241, 255, 241)!important;
+  font-size: 30px !important;
+  font-family: 'Right Sans'; /* Fallback to sans-serif if Soria is not available */
+ }
+
+/* In your CSS file */
+.home-button {
+  padding:  10px  20px; /* Adjust the values as needed */
+}
+
+.index {
+  font-family: 'Object Sans', Helvetica, sans-serif;
+}
+
+.index h1 {
+  padding-top: 150px;
+  text-align: center;
+}
+
+.custom-card-font {
+  font-family: 'Right Sans', Arial, sans-serif; /* Use 'Arial' or another generic font as a fallback */
+  text-align: center;
+}
+
+.card-title.card-title-custom {
+  color: black; /* Replace with the actual color code you want to use */
+}
+
+.item-title {
+  color: rgb(241, 255, 241);
+  font-family: 'Right Sans';
+  font-size: 100px;
+}
+
+
+.index {
+  font-family: 'Right Sans', Helvetica, sans-serif;
+}
+
+.index-header {
+  font-family: 'Right Sans';
+  color: rgb(241, 255, 241)!important;
+  font-size: 50px;
+}
+
+.homepage-text {
+  padding-top: 100px;
+  font-size: 400px;
+  font-family: 'Lingkawi';
+  text-align: center;
+  color: rgb(230, 249, 230);
+}
