--- a/src/App.css
+++ b/src/App.css
@@ -96,6 +96,19 @@ body {
   font-size: 100px;
 }
 
+.item-content {
+  font-family: 'Right Sans';
+  color: rgb(241, 255, 241);
+  padding: 150px 25px 0px 25px;
+  font-size: 30px;
+
+}
+.image-wrapper {
+  position: absolute;
+  left: 400px; /* Move the image  100px to the right */
+  top: 275px; /* Move the image  50px up */
+}
+
 
 .index {
   font-family: 'Right Sans', Helvetica, sans-serif;
@@ -105,6 +118,7 @@ body {
   font-family: 'Right Sans';
   color: rgb(241, 255, 241)!important;
   font-size: 50px;
+  padding-bottom: 75px;
 }
 
 .homepage-text {
@@ -113,4 +127,11 @@ body {
   font-family: 'Lingkawi';
   text-align: center;
   color: rgb(230, 249, 230);
+}
+
+.edit-button {
+  border-radius: 20px;
+}
+.delete-button {
+  border-radius: 20px !important;
 }
