--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@ body {
 .navbar-brand {
   color: rgb(241,  255,  241)!important;
   font-size:  25px !important;
-  font-family: 'Right Sans'; /* Fallback to sans-serif if Soria is not available */
+  font-family: 'Object Sans'; /* Fallback to sans-serif if Soria is not available */
 }
 
 .navbar-buttons {
@@ -77,7 +77,7 @@ body {
 }
 
 .index h1 {
-  padding-top: 150px;
+  padding-top: 250px;
   text-align: center;
 }
 
@@ -115,18 +115,17 @@ body {
 }
 
 .index-header {
-  font-family: 'Right Sans';
+  font-family: 'Object Sans';
   color: rgb(241, 255, 241)!important;
   font-size: 50px;
   padding-bottom: 75px;
 }
 
 .homepage-text {
-  padding-top: 100px;
   font-size: 400px;
   font-family: 'Lingkawi';
   text-align: center;
-  color: rgb(230, 249, 230);
+  color: rgb(223, 252, 223);
 }
 
 .edit-button {
@@ -134,4 +133,11 @@ body {
 }
 .delete-button {
   border-radius: 20px !important;
+}
+
+
+
+.login-form {
+  padding-top: 100px;
+  color: white;
 }
