--- a/src/App.css
+++ b/src/App.css
@@ -141,3 +141,9 @@ body {
   padding-top: 100px;
   color: white;
 }
+
+.navbar-brand.logout {
+  /* Remove the default button styling */
+  background: transparent; /* Transparent background */
+  border: none; /* No border */
+}
