--- a/src/App.css
+++ b/src/App.css
@@ -68,6 +68,10 @@ body {
   transform: scale(0.95); /* Scale down the button to 95% of its original size */
 }
 
+.add-button-2:hover {
+  transform: scale(0.95);
+}
+
 .home-button:hover, .holder-button:hover {
   transform: scale(0.95); /* Scale down the button to  95% of its original size */
 }
@@ -79,11 +83,6 @@ body {
 
 .index {
   font-family: 'Object Sans', Helvetica, sans-serif;
-}
-
-.index h1 {
-  padding-top: 250px;
-  text-align: center;
 }
 
 .custom-card-font {
@@ -109,6 +108,10 @@ body {
   animation: fadeInOut 1s ease-in-out;
 }
 
+.homepage {
+  animation: fadeInOut 1s ease-in-out;
+}
+
 @keyframes fadeInOut {
   0% {
     opacity: 0;
@@ -122,16 +125,27 @@ body {
   background-color: rgb(92, 17, 0) !important;
 }
 
-  .image-wrapper img {
-    width:  50%;
-    height: auto;
-    object-fit:contain; /* This will make sure the image covers the container fully */
-    object-position: center; /* This will center the image within its container */
-  }
+.image-wrapper img {
+  width:  50%;
+  height: auto;
+  object-fit:contain; /* This will make sure the image covers the container fully */
+  object-position: center; /* This will center the image within its container */
+}
 
   /* In your CSS file */
 
-
+.cards {
+  padding-bottom: 50px;
+}
+.add-button-2 {
+  font-family: 'Object Sans';
+  padding-bottom: 50px !important;
+  color: #fff;
+  text-decoration: none;
+  font-size: 50px;
+  transition: transform  0.3s ease; /* Smooth transition for the transform property */
+  will-change: transform;
+}
 
 
 .index {
@@ -143,6 +157,8 @@ body {
   color: rgb(241, 255, 241)!important;
   font-size: 50px;
   padding-bottom: 75px;
+  padding-top: 100px;
+  text-align: center;
 }
 
 .homepage-text {
@@ -150,6 +166,7 @@ body {
   font-family: 'Lingkawi';
   text-align: center;
   color: rgb(223, 252, 223);
+  padding-top: 240px;
 }
 
 .custom-edit-button {
@@ -231,9 +248,10 @@ body {
   padding-top: 25px;
 } 
 
-.new-item-header {
-  padding-top: 25px;
-  text-align: center;
+.new-item-header-container {
+  display: flex; /* Use Flexbox */
+  justify-content: center; /* Center horizontally */
+  padding-top: 100px;
   color: antiquewhite;
   font-family: 'Object Sans';
   text-decoration: underline;
@@ -245,5 +263,16 @@ body {
 }
 
 
+.new-item:hover {
+  transform: scale(0.8);
+}
 
+.new-item {
+  transition: transform  0.3s ease; /* Smooth transition for the transform property */
+  will-change: transform; /* Hint to the browser that the element will be transformed */
+}
+
+/* .new-item-form {
+  padding-top: 100px;
+} */
 
