--- a/src/App.css
+++ b/src/App.css
@@ -116,9 +116,10 @@ body {
   font-family: 'Object Sans';
   color: rgb(241, 255, 241)!important;
   font-size: 50px;
-  padding-bottom: 75px;
+  padding-bottom: 25px;
   padding-top: 100px;
   text-align: center;
+  text-decoration: underline;
 }
 
 .custom-card-font {
@@ -179,13 +180,20 @@ body {
   align-items: flex-start; /* Aligns items at the start of the container (top) */
 }
 
+.selectors {
+  display: flex;
+  justify-content: center; /* Center the selectors horizontally */
+  gap: 20px; /* Adds some space between the selectors */
+  margin-bottom: 20px; /* Optional: Adds some space below the selectors */
+}
+
 .sort-selector {
-  padding-bottom: 50px;
+  padding-bottom: 25px;
   text-align: center;
 }
 
 .category-selector {
-  padding-bottom: 50px;
+  padding-bottom: 25px;
   text-align: center;
 }
 
@@ -246,10 +254,6 @@ body {
   margin-top:  1rem; /* Adjust the spacing as needed */
 }
 
-.index-header {
-  font-family: 'Object Sans';
-  text-decoration: underline;
-}
 
 /********************************* ItemPage *************************************/
 
@@ -343,22 +347,25 @@ body, button, a, input {
 
 #custom-cursor {
   position: fixed;
-  width: 20px; /* Customize as needed */
-  height: 20px; /* Customize as needed */
-  background-color: black; /* Customize as needed */
+  width: 20px;
+  height: 20px;
   border-radius: 50%;
+  background-color: black;
   pointer-events: none;
-  z-index: 10000;
   display: none;
-  transform: translate(-50%, -50%); /* Adjust the cursor position */
+  transition: all 0.1s ease-out;
+  z-index: 9999; /* Ensure the cursor is above other elements */
 }
 
-/* CustomCursor.css */
 #custom-cursor.hovered {
-  /* Example hover state changes */
-  transform: scale(1.5); /* Make the cursor larger when hovering */
-  background-color: red; /* Change cursor color on hover */
+  width: 30px; /* Bigger size for hovered state */
+  height: 30px;
+  margin-left: -10px; /* Adjust based on the size to keep the cursor centered */
+  margin-top: -10px;
+  background-color: transparent;
+  border: 3px solid rgb(211, 250, 235); /* Outlined look */
 }
+
 
 
 
