fix itempage img

--- a/src/App.css
+++ b/src/App.css
@@ -131,28 +131,6 @@ body {
   color: black; /* Replace with the actual color code you want to use */
 }
 
-.item-title {
-  color: rgb(241, 255, 241);
-  font-family: 'Object Sans';
-  font-size: 100px;
-}
-
-.item-content {
-  font-family: 'Object Sans';
-  color: rgb(241, 255, 241);
-  padding: 150px 25px 0px 25px;
-  font-size: 30px;
-  animation: fadeInOut 1s ease-in-out;
-}
-
-
-.image-wrapper img {
-  width: 100%; /* Use 100% width to fill the container */
-  max-height: 100%; /* Set max height to limit the image height */
-  object-fit: scale-down; /* Scale down the image to fit within the container */
-  object-position: center; /* Center the image within its container */
-}
-
 .card {
   width: 300px; /* Fixed width */
   margin: auto; /* Center the card if inside a flexbox or grid */
@@ -257,6 +235,51 @@ body {
 
 /********************************* ItemPage *************************************/
 
+.item-title {
+  color: rgb(241, 255, 241);
+  font-family: 'Object Sans';
+  font-size: 100px;
+}
+
+.content-container {
+  display: flex;
+  align-items: flex-start; /* Align items at the top */
+  gap: 20px; /* Space between item content and image */
+}
+
+.item-content {
+  font-family: 'Object Sans';
+  color: rgb(241, 255, 241);
+  padding: 150px 25px 0px 25px;
+  font-size: 30px;
+  animation: fadeInOut 1s ease-in-out;
+  flex: 1;
+}
+
+.image-wrapper {
+  margin-right: 800px;
+  margin-top: 500px;
+  flex: 1; /* Adjust based on your layout needs, this allows the image wrapper to also take up available space */
+}
+
+.image-wrapper img {
+  position: absolute;
+  top: 300px;
+  left: 350px;
+  width: 500px; /* Fixed width */
+  height: auto; /* Maintain aspect ratio */
+  object-fit: cover; /* Adjust based on preference */
+}
+
+@media (max-width: 768px) {
+  .content-container {
+    flex-direction: column; /* Stack content vertically on smaller screens */
+  }
+
+  .image-wrapper img {
+    width: 100%; /* Full width on smaller screens */
+  }
+}
 
 .new-item-form {
   width: 300px;
