--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,39 @@ body {
  background-color: rgb(92, 17, 0) !important;
 }
 
+body, button, a, input {
+  cursor: none;
+}
+
+button:hover, a:hover {
+  cursor: none !important; /* Hide the default cursor on hover */
+}
+
+#custom-cursor {
+  cursor: auto;
+}
+
+#custom-cursor {
+  position: fixed;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: black;
+  pointer-events: none;
+  display: none;
+  transition: all 0.1s ease-out;
+  z-index: 9999; /* Ensure the cursor is above other elements */
+}
+
+#custom-cursor.hovered {
+  width: 30px; /* Bigger size for hovered state */
+  height: 30px;
+  margin-left: -10px; /* Adjust based on the size to keep the cursor centered */
+  margin-top: -10px;
+  background-color: transparent;
+  border: 3px solid rgb(211, 250, 235); /* Outlined look */
+}
+
 /********************************* HEADER *************************************/
 .navbar-brand {
   color: rgb(241,  255,  241)!important;
@@ -158,23 +191,6 @@ body {
   align-items: flex-start; /* Aligns items at the start of the container (top) */
 }
 
-.selectors {
-  display: flex;
-  justify-content: center; /* Center the selectors horizontally */
-  gap: 20px; /* Adds some space between the selectors */
-  margin-bottom: 20px; /* Optional: Adds some space below the selectors */
-}
-
-.sort-selector {
-  padding-bottom: 25px;
-  text-align: center;
-}
-
-.category-selector {
-  padding-bottom: 25px;
-  text-align: center;
-}
-
 
 .add-button-2 {
   font-family: 'Object Sans';
@@ -203,6 +219,8 @@ body {
   font-family: 'Object Sans';
   text-align: center;
 }
+
+/********************************* SIGNUP *************************************/
 
 .custom-input-color {
   background-color: transparent !important;
@@ -243,6 +261,23 @@ body {
   color: rgb(255, 255, 255); /* Change the color to indicate success */
   font-weight: bold;
   margin-top:  1rem; /* Adjust the spacing as needed */
+}
+
+.selectors {
+  display: flex;
+  justify-content: center; /* Center the selectors horizontally */
+  gap: 20px; /* Adds some space between the selectors */
+  margin-bottom: 20px; /* Optional: Adds some space below the selectors */
+}
+
+.sort-selector {
+  padding-bottom: 25px;
+  text-align: center;
+}
+
+.category-selector {
+  padding-bottom: 25px;
+  text-align: center;
 }
 
 
@@ -380,38 +415,7 @@ body {
 
 
 
-body, button, a, input {
-  cursor: none;
-}
 
-button:hover, a:hover {
-  cursor: none !important; /* Hide the default cursor on hover */
-}
-
-#custom-cursor {
-  cursor: auto;
-}
-
-#custom-cursor {
-  position: fixed;
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  background-color: black;
-  pointer-events: none;
-  display: none;
-  transition: all 0.1s ease-out;
-  z-index: 9999; /* Ensure the cursor is above other elements */
-}
-
-#custom-cursor.hovered {
-  width: 30px; /* Bigger size for hovered state */
-  height: 30px;
-  margin-left: -10px; /* Adjust based on the size to keep the cursor centered */
-  margin-top: -10px;
-  background-color: transparent;
-  border: 3px solid rgb(211, 250, 235); /* Outlined look */
-}
 
 
 
